Version 4.5.12 (2020-07-03)
  Fixed so links with xlink:href attributes are filtered correctly to prevent XSS. #TINY-1626
  Fixed the `visualchars` plugin converting HTML-like text to DOM elements in certain cases #TINY-4507
  Fixed HTML comments incorrectly being parsed in certain cases #TINY-4511
  Fixed a security issue related to CDATA sanitization during parsing #TINY-4669
Version 4.5.11 (2019-05-16)
  Fixed bug where the editor would scroll to the top of the editable area if a dialog was closed in inline mode. #TINY-1073
Version 4.5.10 (2018-10-19)
  Changed the contextual toolbar shortcut to Ctrl+F9 since an Edge shortcut interfered with the previous one.
Version 4.5.9 (2018-08-02)
  Fixed a bug where Edge 17 wouldn't be able to select images or tables.
Version 4.5.8 (2017-10-05)
	Fixed bug where paste on Edge wouldn't paste UTF characters since Microsoft didn't implement the html5 clipboard api correctly.
	Fixed bug where it was hard to focus the editor on IE 10 since the body element didn't have full height.
	Fixed bug where malformed blob urls wouldn't be handled correctly by the editor.
Version 4.5.7 (2017-04-25)
	Fixed bug with selection around inline contenteditable false would get collapsed incorrectly.
	Fixed bug where pasting on Microsoft Edge 40+ would produce clipboard fragment headers.
Version 4.5.6 (2017-03-30)
	Fixed bug where it wasn't possible to select floated images in some cases.
Version 4.5.5 (2017-03-07)
	Fixed text formatting bug with fontsize could not be changed after changing the text color.
Version 4.5.4 (2017-02-23)
	Fixed bug where setBaseAndExtend would throw exceptions on Chrome 58 when selecting images.
	Fixed bug where deleting partially selected contents could remove all contents in some edge cases on WebKit.
Version 4.5.3 (2017-02-01)
	Added keyboard navigation for menu buttons when the menu is in focus.
	Added api to the list plugin for setting custom classes/attributes on lists.